# qstorable

./: CMakeLists.txt  LICENSE  README.md
cmake/: QStorableConfig.cmake.in
include/QStorable/: qstorable.hpp
tests/: CMakeLists.txt
tests/binary/: CMakeLists.txt  TestQStorable.cpp  compares.hpp  test_array_field.cpp  test_base_field.cpp  test_custom_array_field.cpp  test_custom_field.cpp  test_real_data.cpp
tests/binary_compact/: CMakeLists.txt  test_base_compact_field.cpp
